Fixed editor always scrolling and spacing issues with editor

--- a/applications/dashboard/scss/compatibility/editor/_richEditorLegacy.scss
+++ b/applications/dashboard/scss/compatibility/editor/_richEditorLegacy.scss
@@ -241,7 +241,9 @@ body.hasRichEditor {
 .richEditor-text {
     overflow: visible;
     padding: {
+        top: $richEditor_verticalPadding;
         right: $richEditor_innerPadding;
+        bottom: $richEditor_verticalPadding;
         left: $richEditor_innerPadding;
     }
     &:focus {
